[package]
name = "miwa-axum"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miwa = {workspace = true}
axum = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
derive_builder = {workspace = true}
async-trait = {workspace = true}
